kubernetes/avengers-nodejs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: avengers-nodejs
    country: sg
    run: avengers-nodejs
    tags.datadoghq.com/env: avengers-app
    tags.datadoghq.com/service: avengers-nodejs
    tags.datadoghq.com/version: phase3
  name: avengers-nodejs
  namespace: marvel-python-backend
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: avengers-nodejs
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        admission.datadoghq.com/enabled: "true"
        app: avengers-nodejs
        country: sg
        run: avengers-nodejs
        tags.datadoghq.com/env: avengers-app
        tags.datadoghq.com/service: avengers-nodejs
        tags.datadoghq.com/version: phase3
    spec:
      containers:
      - env:
        - name: DB_USER
          value: "admin"
        - name: DB_HOST
          value: "35.232.212.199"
        - name: DB_NAME
          value: "userdb"
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              name: db-secret
              key: DB_PASSWORD
        - name: DB_PORT
          value: "5432"
        - name: DD_APM_ENABLED
          value: "true"
        - name: DD_APPSEC_ENABLED
          value: "true"
        - name: DD_PROFILING_ENABLED
          value: "true"
        - name: DD_RUNTIME_METRICS_ENABLED
          value: "true"
        - name: DD_TRACE_DEBUG
          value: "true"
        - name: DD_AGENT_HOST
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: status.hostIP
        image: kennethfoo24/marvel:70f5c0936fb7c22095970a2e8eba4c9b19d64a57
        imagePullPolicy: Always
        name: avengers-nodejs
        ports:
        - containerPort: 5500
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          name: kube-api-access-dwntg
          readOnly: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
      volumes:
      - name: kube-api-access-dwntg
        projected:
          defaultMode: 420
          sources:
          - serviceAccountToken:
              expirationSeconds: 3607
              path: token
          - configMap:
              items:
              - key: ca.crt
                path: ca.crt
              name: kube-root-ca.crt
          - downwardAPI:
              items:
              - fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.namespace
                path: namespace
