kubernetes/ingress-avengers-nodejs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-avengers-nodejs
  namespace: marvel-python-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dd-demo-sg.one
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: avengers-nodejs-lb
            port:
              number: 80
